# Study-DFO

./: .gitignore  README.md  log.txt  setpath.m
_old_tests/: data_js.mat  ess_report.mat  evaluateMeigoTest.m  evaluateToyResults.m  outputProgress.m  testMeigo.m  testMeigo_ec.mat  testMeigo_jakstat.mat  testMultiStartOptimizersOnEC.m  testMultistartOptimizersOnJakstat.m  testOnBanana.m
algorithms/: funHandleFileNameWrap.m  functionHandleFileNameWrapper.m
amici/models/erbb_standard/: CMakeLists.txt  erbb_standard_J.cpp  erbb_standard_JB.cpp  erbb_standard_JDiag.cpp  erbb_standard_JSparse.cpp  erbb_standard_JSparseB.cpp  erbb_standard_Jv.cpp  erbb_standard_JvB.cpp  erbb_standard_Jy.cpp  erbb_standard_dJydsigma.cpp  erbb_standard_dJydy.cpp  erbb_standard_deltasx.cpp  erbb_standard_dwdp.cpp  erbb_standard_dwdx.cpp  erbb_standard_dxdotdp.cpp  erbb_standard_dydp.cpp  erbb_standard_dydx.cpp  erbb_standard_qBdot.cpp  erbb_standard_root.cpp  erbb_standard_sigma_y.cpp  erbb_standard_sxdot.cpp  erbb_standard_w.cpp  erbb_standard_x0.cpp  erbb_standard_xBdot.cpp  erbb_standard_xdot.cpp  erbb_standard_y.cpp  fca5da754c7b6fa18dcd3b3b83660b3a39066d20_5f1145f005a702ec6d8789146f88848a.mat  fca5da754c7b6fa18dcd3b3b83660b3a39066d20_8dfef61031c9f2b660f03082e407197d.mat  hashes.mat  wrapfunctions.cpp  wrapfunctions.h
amici/models/erbb_standard/2017a/g0x2B0x2B_GCC_6_4_1_20170727_Red_Hat_6_4_1_1/release/: erbb_standard_J.cpp.md5  erbb_standard_JB.cpp.md5  erbb_standard_JDiag.cpp.md5  erbb_standard_JSparse.cpp.md5  erbb_standard_JSparseB.cpp.md5  erbb_standard_Jv.cpp.md5  erbb_standard_JvB.cpp.md5  erbb_standard_Jy.cpp.md5  erbb_standard_dJydsigma.cpp.md5  erbb_standard_dJydy.cpp.md5  erbb_standard_deltasx.cpp.md5  erbb_standard_dwdp.cpp.md5  erbb_standard_dwdx.cpp.md5  erbb_standard_dxdotdp.cpp.md5  erbb_standard_dydp.cpp.md5  erbb_standard_dydx.cpp.md5  erbb_standard_qBdot.cpp.md5  erbb_standard_root.cpp.md5  erbb_standard_sigma_y.cpp.md5  erbb_standard_sxdot.cpp.md5  erbb_standard_w.cpp.md5  erbb_standard_x0.cpp.md5  erbb_standard_xBdot.cpp.md5  erbb_standard_xdot.cpp.md5  erbb_standard_y.cpp.md5
models_sysbio/: compile_examples.m  compile_models.m
models_testfunction/: TF.m  createImages.m  testFunWrap.m  testFunctionWrap.m  testFunctionWrapper.m
(+2364 files in other folders)
